--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "plugins": ["react-hooks"],
+    "rules": {
+        "react-hooks/exhaustive-deps": 0,
+        "no-unused-vars": "off"
+    }
   },
   "browserslist": {
     "production": [
